trustfall_core/src/resources/test_data/parse_errors/output_name_with_dashes.parse-error.ron
Err(InvalidOutputName("name-with-dashes", [
  '-',
], Pos(
  line: 4,
  column: 28,
)))
